build/log/idf_py_stderr_output_166608
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:53:23: error: lvalue required as left operand of assignment
   53 |                 index = uart_pattern_get_pos(uart_num);
      |                       ^
/home/bmetal/esp-idf/uartTest/main/uartTest.c:56:25: warning: unused variable 'rx_junk_read' [-Wunused-variable]
   56 |                 uint8_t rx_junk_read = uart_read_bytes(uart_num, rx_junk, index, 500);
      |                         ^~~~~~~~~~~~
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
